fixed the content not showing on mobile, fixed the reponsiveness issues and animation scrolling. We should be good to go

--- a/public/css/general-style.css
+++ b/public/css/general-style.css
@@ -10,6 +10,10 @@
   }
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
